# optee_client

./: .gitignore  .ibart.yaml  CMakeLists.txt  CMakeToolchain.txt  README.md
tee-supplicant/src/: rpmb.c  tee_supplicant.c  teec_rpc.h
